--- a/index.liquid
+++ b/index.liquid
@@ -1,7 +1,4 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: Home
 ---
-
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
