--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -12,7 +12,7 @@ title: 11ty Boilerplate
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/gh/hankhank10/alpine-fetch@main/alpine-fetch.js"></script>
 
-    <link rel="stylesheet" href="/styles/screen.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   </head>
   <body>
       {{ content }}
